# music-recommender-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: baseline.yaml
src/data/: load_interactions.py
src/training/: train_baseline.py
tests/: test_load_interactions.py
